ARBEIT: Fix noJS noFlexbox fallback spacing

--- a/sass/web.arbeit/modules/centerpage/_jobbox-dropdown.sass
+++ b/sass/web.arbeit/modules/centerpage/_jobbox-dropdown.sass
@@ -5,7 +5,7 @@ $jobbox-border-width: 6px
 	margin: remify(32px) $page-padding--small remify(14px)
 	position: relative
 	+respond-min($break-tablet-min)
-		margin: 0 $cp-padding
+		margin: $vertical-space $cp-padding
 
 	&__label
 		@extend %teaser-adlabel
